--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -12,9 +12,10 @@
 }
 
 #input {
-  background: @primary;
+  background: rgba(0, 0, 0, 0.5);
   border: none;
   padding: 10px 20px;
+  color: white;
 }
 
 #text {
